Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -888,7 +888,7 @@
     "location": "Standort",
     "lock-accounting": "Buchhaltung sperren",
     "lock-entry": "Buchung sperren",
-    "lock-invoice": "Rechnung markiert",
+    "lock-invoice": "Rechnung als gesendet markieren",
     "lock-unlock": "sperren-entsperren",
     "lock-unlock-account-entry": "Buchung sperren\/entsperren",
     "locked": "Verschlossen",
@@ -1058,7 +1058,7 @@
     "only-active": "Nur aktive",
     "only-charged": "nur berechnet",
     "only-closed": "Nur geschlossen",
-    "only-insert": "Sólo añadir",
+    "only-insert": "Nur hinzufügen",
     "only-owner-data": "Nur Benutzerdaten anzeigen",
     "only-pending": "Nur ausstehend",
     "only-suspended": "Nur ausgesetzt",
@@ -1157,7 +1157,7 @@
     "plugin-needed": "Plugin %pluginName% nötig.",
     "plugin-needs-fs-version": "Plugin %pluginName% benötigt FacturaScripts %minVersion%, aber sie haben FacturaScripts %version% installiert",
     "plugin-not-compatible": "Plugin %pluginName% nicht kompatibel mit FacturaScripts 2018.",
-    "plugin-order": "Orden: %num%",
+    "plugin-order": "Bestellung: %num%",
     "plugin-phpversion-error": "Das Plugin %pluginName% erfordert PHP %php% oder höher",
     "plugin-removal-disabled": "Plugin-Entfernung ist auf diesem Server deaktiviert",
     "plugin-unsupported-version": "Das Plugin %pluginName% ist für FacturaScripts 2017 oder älter, aber Sie verwenden FacturaScripts %version%",
@@ -1180,7 +1180,7 @@
     "previous-documents": "vorherige Dokumente",
     "previous-quarter": "Vorheriges Quartal",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previously-sold-to-customer": "Zuvor an den Kunden verkauft",
     "price": "Preis",
     "price-with-tax": "Preis + Steuer",
     "principal": "Main",
@@ -1289,7 +1289,7 @@
     "renumber-invoices-success": "Las facturas del ejercicio '%exercise%' han sido renumeradas correctamente",
     "repeat-new-password": "Passwort wiederholen",
     "repeat-password": "Passwort wiederholen",
-    "reply": "Respuesta",
+    "reply": "Antwort",
     "report": "Bericht",
     "report-grouping-account": "Nach Konto gruppieren",
     "report-non-grouping-account": "Nicht nach Konto gruppieren",
@@ -1380,7 +1380,7 @@
     "short": "Kurz",
     "short-name": "Kurzname:",
     "show": "Zeigen",
-    "show-balance-graphic": "show-balance-graphic",
+    "show-balance-graphic": "Grafiken in Buchungen anzeigen",
     "show-crm-warnings": "CRM-Warnungen anzeigen",
     "show-expired-receipts": "Abgelaufene Belege anzeigen",
     "show-month-stats": "Monatsstatistiken anzeigen",
@@ -1402,7 +1402,7 @@
     "sort-by-column": "Nach Spalte sortieren",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Ordenar por fecha desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
     "sorted-asc": "Aufsteigend sortiert",
     "sorted-desc": "Absteigend sortiert",
@@ -1455,7 +1455,7 @@
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
     "summary": "Zusammenfassung",
-    "sums-and-balances": "Sumas y saldos",
+    "sums-and-balances": "Summen und Salden",
     "sunday": "Sonntag",
     "supplied": "g",
     "supplied-amount": "Gelieferte Menge",
@@ -1471,7 +1471,7 @@
     "supplier-invoice": "Lieferantenrechnung",
     "supplier-invoice-deleted-successfully": "Kaufrechnung 0 wurde erfolgreich gelöscht.",
     "supplier-invoices": "Lieferantenrechnungen",
-    "supplier-not-found": "supplier-not-found",
+    "supplier-not-found": "Lieferant nicht gefunden",
     "supplier-order": "Lieferantenbestellung",
     "supplier-orders": "Lieferantenbestellungen",
     "supplier-payment-concept": "Zahlung des Belegs %document%",
@@ -1488,7 +1488,7 @@
     "symbol": "Symbol",
     "table": "Tabelle",
     "table-checked": "Tabelle 0 ist markiert.",
-    "table-not-found": "table-not-found",
+    "table-not-found": "Tabelle %tableName% nicht gefunden!",
     "table-size": "Tabellengröße",
     "tables": "zeichnen",
     "task": "Aufgabe",
@@ -1521,7 +1521,7 @@
     "this-last-month": "diesen letzten Monat",
     "this-last-week": "this-last-week",
     "this-last-year": "das letzte Jahr",
-    "this-month": "this-month",
+    "this-month": "Diesen Monat",
     "this-week": "Diese Woche",
     "this-year": "dieses Jahr",
     "thousands-separator": "Tausendertrennzeichen",
@@ -1651,7 +1651,7 @@
     "wildcard-title": "Platzhalter ersetbar durch Werte",
     "without-closure": "Ohne Abschluss",
     "without-domicile": "ohne Domizil",
-    "without-groups": "Sin grupo",
+    "without-groups": "Ohne Gruppe",
     "without-regularization": "Ohne Regulierung",
     "without-tax": "Ohne Steuer",
     "without-taxation": "Ohne Steuern",
@@ -1660,7 +1660,7 @@
     "wizard-plugins": "Ein Plugin ist eine Ergänzung, die neue Funktionalitäten hinzufügt. Wählen Sie die Plugins aus, die Sie sofort aktivieren möchten, oder tun Sie dies später über die Systemsteuerung.",
     "work-events": "Arbeitsevents",
     "working-hours": "Arbeitszeit",
-    "works": "Trabajos",
+    "works": "Arbeiten",
     "write-a-message-here": "Schreibe eine Nachricht hier",
     "x-column": "Spalte X",
     "x-operation": "Operation X",
