--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -229,7 +229,7 @@
     "children": "Bambini",
     "children-accounts": "Conti figli",
     "choose-currency": "Scegli la valuta",
-    "choose-doc-type": "Choose document type",
+    "choose-doc-type": "Selezionare il tipo di documento",
     "choose-employee": "Scegli dipendente",
     "choose-files": "Scegli i file",
     "choose-payment-method": "Scegli il metodo di pagamento",
@@ -244,7 +244,7 @@
     "close": "vicino",
     "close-box": "Chiudi cassa",
     "close-exercise": "chiudere l'esercizio",
-    "closed": "Closed",
+    "closed": "Chiuso",
     "closed-exercise": "L'esercizio 0 è chiuso.",
     "closed-exercise-cant-change-date": "L'esercizio 0 è chiuso. Non puoi cambiare la data.",
     "closing-accounting-completed": "Chiusura contabile completata",
@@ -338,7 +338,7 @@
     "credit": "Credito",
     "crm": "CRM",
     "cron-job": "Lavoro pianificato",
-    "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite",
+    "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite.",
     "crons": "Cron",
     "currency": "Moneta",
     "currency-position": "Posizione del simbolo di valuta",
@@ -812,7 +812,7 @@
     "items-removed-correctly": "elementi rimossi correttamente",
     "ivarep-subaccount-not-found": "Subconto IVA non trovato",
     "ivasop-account-not-found": "Conto Ivasop non trovato",
-    "january": "Enero",
+    "january": "Gennaio",
     "job-name": "Nome del lavoro",
     "journal": "Giornale",
     "journal-closing": "Chiusura giornale",
@@ -1020,7 +1020,7 @@
     "no-invoice": "Nessuna fattura",
     "no-outstanding-amount": "nessuna somma in sospeso",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
-    "no-reference": "Sin referencia",
+    "no-reference": "Senza riferimento",
     "no-selected-item": "Nessun elemento selezionato",
     "no-stock": "Nessun stock",
     "non-editable-accounting-entry": "Assegnazione non modificabile",
@@ -1282,7 +1282,7 @@
     "renew": "Rinnovare",
     "renumber": "Rinumerare",
     "renumber-accounting": "Rinumerare la contabilità",
-    "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
+    "renumber-accounting-error": "Si è verificato un errore durante la rinumerazione delle registrazioni contabili nell'esercizio fiscale %exerciseCode%",
     "renumber-accounting-ok": "Rinumerazione delle voci contabili completata",
     "renumber-accounting-p": "Rinumera le scritture contabili per data, da minore a maggiore",
     "renumber-invoices-p": "Rinumerare le fatture in base alla data, da minore a maggiore",
@@ -1391,7 +1391,7 @@
     "signature": "Firma",
     "simple": "Semplice",
     "simplified": "semplificata",
-    "size": "size",
+    "size": "Dimensione",
     "sketch": "Schizzo",
     "sketch-invoice-warning": "Questa fattura è ancora uno schizzo. Rendila ufficiale cambiando il suo stato in emesso",
     "small": "piccolo",
@@ -1437,7 +1437,7 @@
     "sub-account": "Account secondario",
     "sub-type": "sotto tipo",
     "subaccount": "sottoconti",
-    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
+    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% ha una conta assegnata errata.",
     "subaccount-belongs-other-year": "Il sottoconto 0 appartiene a un altro anno finanziario.",
     "subaccount-irpf": "Conto per deduzioni",
     "subaccount-irpf-creditor": "Subconto del creditore IRPF",
@@ -1526,7 +1526,7 @@
     "this-year": "Quest'anno",
     "thousands-separator": "separatore delle migliaia",
     "thursday": "giovedì",
-    "ticket": "Ticket",
+    "ticket": "Biglietto",
     "tickets": "Biglietti",
     "time": "Tempo",
     "timezone": "Seleziona il fuso orario",
@@ -1571,7 +1571,7 @@
     "unbalance": "sbilanciato",
     "unbalanced-entry": "Prenotazione non bilanciata",
     "unchecked": "Non verificato",
-    "under-minimums": "under-minimums",
+    "under-minimums": "Sotto minimi",
     "undo": "Disfare",
     "unit-profit": "Profitto unit.",
     "unit-purchase-price": "Prezzo unitario di acquisto.",
@@ -1606,7 +1606,7 @@
     "using-filecache": "Utilizzando Filecache",
     "using-memcache": "Utilizzando Memcache",
     "valid-for-day": "Valido per un giorno",
-    "validate": "validate",
+    "validate": "Convalida",
     "validate-iban": "Validare IBAN",
     "valuation-type": "Tipo di valutazione",
     "value": "Valore",
