--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -107,7 +107,7 @@
     "app-preferences": "Preferencje aplikacji",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
-    "approve": "Aprobar",
+    "approve": "Zatwierdź",
     "approve-document": "Aprobar documento",
     "approve-document-same-date": "Aprobar documento en la misma fecha",
     "approved": "Aprobado",
@@ -141,7 +141,7 @@
     "background-overlay": "Kolor nakładki na tle",
     "badge": "Distintivo",
     "balance": "Saldo",
-    "balance-account": "Balance Cuentas",
+    "balance-account": "Bilans kont",
     "balance-account-abreviated": "Zrównoważony skrót konta",
     "balance-amounts": "Bilans sum i sald",
     "balance-sheet": "Balance de Situación",
@@ -201,7 +201,7 @@
     "cant-delete-default-serie": "No se puede eliminar la serie predeterminada",
     "cant-delete-default-tax": "Nie można usunąć domyślnego podatku",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
-    "cant-delete-last-user": "No se puede eliminar al último usuario",
+    "cant-delete-last-user": "Nie można usunąć ostatniego użytkownika",
     "cant-delete-variant-with-documents": "Nie można usunąć produktu lub wariantu %reference%, ponieważ został już kupiony lub sprzedany. Możesz go jednak zablokować, jeśli chcesz.",
     "cant-load-controller": "Nie można załadować kontrolera '%controllerName%'.",
     "cant-modify-reference": "Nie można zmodyfikować odniesienia.",
@@ -228,7 +228,7 @@
     "checked": "Zaznaczone",
     "children": "Niño",
     "children-accounts": "Cuentas Hijos",
-    "choose-currency": "Elige divisa",
+    "choose-currency": "Wybierz walutę",
     "choose-doc-type": "Wybierz rodzaj dokumentu",
     "choose-employee": "Wybierz pracownika",
     "choose-files": "Seleccionar archivos",
@@ -267,7 +267,7 @@
     "colors": "Colores",
     "column": "Kolumna",
     "columns": "Kolumny",
-    "combination-code": "Código de combinación",
+    "combination-code": "Kod kombinacji",
     "combinations": "Kombinacje",
     "commercial-terms": "Términos comerciales",
     "commission": "Prowizja",
@@ -477,7 +477,7 @@
     "document-type-valid-length": "Nieprawidłowy typ dokumentu (musi mieć od 1 do 20 znaków).",
     "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
     "document-without-total": "Dokument %document% bez sumy lub z sumą równą 0.",
-    "documentation": "Documentación",
+    "documentation": "Dokumentacja",
     "documents": "Documentos",
     "documents-generated": "Documentos generados",
     "domiciled": "Domiciliado",
@@ -532,7 +532,7 @@
     "epigraph-group": "Grupo de Epígrafe",
     "epigraphs": "Epigrafy",
     "epigraphs-group": "Grupa Epigrafy",
-    "equivalence": "Equivalencia",
+    "equivalence": "Równoważność",
     "equivalent-account-not-found": "Nie znaleziono konta równoważnego dla %accountCode% w ćwiczeniu %exerciseCode% Czy zaimportowałeś plan kont?",
     "equivalent-subaccount-not-found": "No se ha encontrado ninguna subcuenta equivalente a %subAccountCode% para copiar.",
     "error": "BŁĄD: %error%",
@@ -619,7 +619,7 @@
     "filecache-set-key-item": "Przypisany element '%item%' do Filecache.",
     "files": "Archivos",
     "filter-method": "Metoda filtracji",
-    "filter-records-containing-indicated-value": "Filtrar registros que contienen el valor",
+    "filter-records-containing-indicated-value": "Filtruj rekordy zawierające wartość",
     "filters": "Filtry",
     "finalize": "Finalizar",
     "find-problems": "Znaleźć problemy",
@@ -666,7 +666,7 @@
     "generate": "Generuj",
     "generate-accounting-entries": "Generuj wpisy księgowe",
     "generate-accounting-entry": "Generar asiento contable",
-    "generate-doc-type": "Generar tipo de documento",
+    "generate-doc-type": "Generować typ dokumentu",
     "generate-invoice": "Crear factura",
     "generate-receipts": "Generuj paragon",
     "generate-settlements": "Generuj rozliczenia",
@@ -711,7 +711,7 @@
     "group-or-split": "Agrupar o partir",
     "group-or-split-p": "Ten kreator pozwala generować nowy dokument na podstawie linii innych dokumentów. Wybierz ilości, które chcesz użyć, datę nowego dokumentu i naciśnij przycisk generuj.",
     "grouping-type": "Agrupación",
-    "groups": "Grupos",
+    "groups": "Grupy",
     "has-attachments": "Ma załączniki",
     "has-parent": "Ma rodzica",
     "hash": "Hash",
@@ -738,7 +738,7 @@
     "https": "HTTPS",
     "i-forgot-password": "He olvidado mi contraseña",
     "iban": "IBAN",
-    "icon": "Icono",
+    "icon": "Ikona",
     "id": "Id.",
     "idaccount": "Id. Cuenta",
     "idem-wildcard-info": "Copiar el valor de la linea anterior",
@@ -748,7 +748,7 @@
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Podkonto podatku odsprzedanego",
     "import": "Importować",
-    "import-accounting-plan": "Importar plan contable",
+    "import-accounting-plan": "Importuj plan księgowy",
     "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
     "import-file": "Plik importu",
     "in-progress": "W trakcie",
@@ -780,7 +780,7 @@
     "invalid-iban": "IBAN no válido: %iban%",
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Nieprawidłowy numer: %number%",
-    "invalid-request": "Petición no válida",
+    "invalid-request": "Nieprawidłowe żądanie",
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Factura",
@@ -809,12 +809,12 @@
     "issued": "Wydano",
     "item-limit": "Elementy na stronę",
     "items-added-correctly": "%num% elementos añadidos correctamente",
-    "items-removed-correctly": "%num% elementos quitados correctamente",
+    "items-removed-correctly": "%num% elementy usunięte poprawnie",
     "ivarep-subaccount-not-found": "Podkonto odwrotne VAT nie znalezione",
     "ivasop-account-not-found": "Nie znaleziono podkonta IVA",
     "january": "Enero",
     "job-name": "Nazwa pracy",
-    "journal": "Diario",
+    "journal": "Dziennik",
     "journal-closing": "Dziennik zamknięcia",
     "journal-opening": "Diario de apertura",
     "journals": "Diarios",
@@ -890,8 +890,8 @@
     "lock-entry": "Zablokuj wpis",
     "lock-invoice": "Oznacz jako wystawioną",
     "lock-unlock": "(Des)Bloquear",
-    "lock-unlock-account-entry": "Bloquear\/Desbloquear el asiento contable",
-    "locked": "Bloqueado",
+    "lock-unlock-account-entry": "Blokować\/Odblokować zapis księgowy",
+    "locked": "Zablokowany",
     "log": "Log",
     "login": "Zaloguj się",
     "login-cookie-fail": "Nieprawidłowy ciasteczko logowania",
@@ -934,7 +934,7 @@
     "max-input-vars-warning": "Z aktualnym ustawieniem PHP (max_input_vars) nie będziesz mógł pracować z dokumentami większymi niż %numlines% linii.",
     "max-risk": "Maksymalne ryzyko",
     "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-without-cifnif": "Maksymalna kwota bez CIF\/NIF",
     "maximum-stock": "Stock máximo",
     "may": "Mayo",
     "mega-search": "MegaBuscador",
@@ -956,7 +956,7 @@
     "minimum-amount-without-cifnif": "Minimalna kwota bez CIF\/NIF",
     "minimum-stock": "Stock mínimo",
     "minutes": "Minuty",
-    "mismatched-accounting-entry": "Asiento descuadrado",
+    "mismatched-accounting-entry": "Niezgodny zapis księgowy",
     "missing-data-epigraph-group": "Brak danych w grupie epigrafów.",
     "missing-data-subaccount": "Brak danych w subkoncie.",
     "missing-epigraph-data": "Brak danych w epigrafie.",
@@ -1045,7 +1045,7 @@
     "notification": "Notificación",
     "notifications": "Powiadomienia",
     "november": "Noviembre",
-    "number": "Número",
+    "number": "Numer",
     "number-attachments": "Liczba załączników",
     "number-length": "Longitud del número",
     "number-recipients": "Liczba odbiorców",
@@ -1153,7 +1153,7 @@
     "plugin-installation-disabled": "La instalación de plugins está desactivada en este servidor",
     "plugin-installed": "Plugin '%pluginName%' zainstalowany",
     "plugin-need-update": "Wtyczka %plugin% będzie wymagać aktualizacji, aby działała z nową wersją FacturaScripts.",
-    "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
+    "plugin-need-update-but": "Wtyczka %plugin% nie ma jeszcze kompatybilnej aktualizacji.",
     "plugin-needed": "Se requiere el plugin %pluginName%.",
     "plugin-needs-fs-version": "El plugin %pluginName% necesita FacturaScripts %minVersion% pero tiene instalado FacturaScripts %version%",
     "plugin-not-compatible": "Wtyczka %pluginName% nie jest zgodna z FacturaScripts %version%",
@@ -1161,12 +1161,12 @@
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
     "plugin-removal-disabled": "La eliminación de plugins está desactivada en este servidor",
     "plugin-unsupported-version": "El plugin %pluginName% es para FacturaScripts 2017 o anteriores, pero estás usando FacturaScripts %version%",
-    "plugin-update": "Actualización del plugin %pluginName% a la versión %version%",
+    "plugin-update": "Aktualizacja wtyczki %pluginName% do wersji %version%",
     "plugins": "Plugins",
     "plugins-p": "Wtyczki umożliwiają dodawanie nowych funkcji. Aktywuj te, które potrzebujesz teraz, lub zrób to, gdy chcesz z menu administratora.",
     "points": "Punkty",
     "points-of-interest": "Punkty zainteresowań",
-    "port": "Puerto",
+    "port": "Port",
     "position": "Cargo",
     "positive-balance": "Saldo positivo",
     "post-office-box": "Apartado",
@@ -1180,7 +1180,7 @@
     "previous-documents": "Documentos previos",
     "previous-quarter": "Poprzedni kwartał",
     "previously-purchased-from-supplier": "Comprado anteriormente al proveedor",
-    "previously-sold-to-customer": "Vendido anteriormente al cliente",
+    "previously-sold-to-customer": "Sprzedano wcześniej klientowi",
     "price": "Precio",
     "price-with-tax": "Precio + impuestos",
     "principal": "Principal",
@@ -1213,9 +1213,9 @@
     "provinces": "Provincias",
     "public": "Publiczne",
     "public-key": "Clave pública",
-    "purchase-rate": "Tasa de compras",
-    "purchased-quantity": "Cant. comprada",
-    "purchases": "Compras",
+    "purchase-rate": "Wskaźnik zakupów",
+    "purchased-quantity": "Ilość kupiona",
+    "purchases": "Zakupy",
     "purchases-subaccount-not-found": "Nie znaleziono subkonta zakupów",
     "pvp": "PVP",
     "pvp-total": "Cena całkowita",
@@ -1245,7 +1245,7 @@
     "record-deleted-correctly": "Rekord został poprawnie usunięty!",
     "record-deleted-error": "Błąd podczas usuwania rekordu",
     "record-not-found": "Nie znaleziono rekordu",
-    "record-save-error": "Ha ocurrido un error mientras se guardaban los datos",
+    "record-save-error": "Wystąpił błąd podczas zapisywania danych",
     "record-updated-correctly": "Registro actualizado correctamente.",
     "recreate-system-integrity": "Volver a crear la integridad del sistema",
     "rectified-invoice": "Factura rectificativa",
@@ -1263,7 +1263,7 @@
     "refunds": "Devoluciones",
     "register": "Registrar",
     "register-install-ad": "Registra la instalación de FacturaScripts",
-    "register-install-ad-p": "Si registras la instalación de FacturaScripts obtendrás 1 mes de patrocinio PRO, que te permite descargar uno de nuestros plugins exclusivos. Además nos ayuda obtener estadísticas de versiones del core y de PHP.",
+    "register-install-ad-p": "Jeśli zarejestrujesz instalację FacturaScripts, otrzymasz 1 miesiąc sponsoringu PRO, który pozwala na pobranie jednej z naszych ekskluzywnych wtyczek. Pomaga nam także uzyskać statystyki dotyczące wersji rdzenia i PHP.",
     "register-installation": "Zarejestruj instalację",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
@@ -1398,7 +1398,7 @@
     "smaller-than": "Mniejsze niż",
     "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
     "social-security-number": "Número Seguridad Social",
-    "sort": "Orden",
+    "sort": "Sortowanie",
     "sort-by-column": "Sortuj wg kolumny",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
     "sort-by-date-desc": "Sortuj wg daty malejąco",
@@ -1420,13 +1420,13 @@
     "start-time": "Czas rozpoczęcia",
     "starting-cron": "Uruchamianie crona FacturaScripts...",
     "state": "Stan",
-    "states": "Estados",
+    "states": "Stany",
     "status": "Estado",
     "status-document": "Stan dokumentu",
     "status-name-valid-length": "Nombre del estado no válido (debe tener entre 1 y 20 carácteres).",
     "status-value-is-number": "Pole statusu musi być liczbą.",
     "stock": "Zapas",
-    "stock-transfer": "Transferencia de stock",
+    "stock-transfer": "Transfer towarów",
     "stock-transfers": "Przeniesienia zapasów",
     "stockmax": "Max zapasów",
     "stockmin": "Stock mín.",
@@ -1465,7 +1465,7 @@
     "supplier-code": "Cód. Proveedor",
     "supplier-delivery-note": "Albarán de Proveedor",
     "supplier-delivery-notes": "Albaranes de proveedores",
-    "supplier-estimation": "Presupuesto de Proveedor",
+    "supplier-estimation": "Szacowanie dostawcy",
     "supplier-estimations": "Kosztorysy dostawców",
     "supplier-have-no-iban": "Dostawca %%supplier nie posiada IBAN (numer konta bankowego)",
     "supplier-invoice": "Factura de Proveedor",
@@ -1526,10 +1526,10 @@
     "this-year": "Ten rok",
     "thousands-separator": "Separator tysięcy",
     "thursday": "Jueves",
-    "ticket": "Ticket",
-    "tickets": "Tickets",
+    "ticket": "Bilet",
+    "tickets": "Bilety",
     "time": "Hora",
-    "timezone": "Zona horaria",
+    "timezone": "Strefa czasowa",
     "title": "Tytuł",
     "title-font-size": "Rozmiar czcionki tytułu",
     "title-url": "Tytuł (URL)",
@@ -1556,7 +1556,7 @@
     "translation": "Traducción",
     "translations": "Tłumaczenia",
     "travel": "Viaje",
-    "try-again-later": "Pruebe de nuevo más tarde",
+    "try-again-later": "Spróbuj ponownie później",
     "tuesday": "Wtorek",
     "type": "Typ",
     "type-alert": "Tipo alert",
@@ -1641,7 +1641,7 @@
     "warnings": "Ostrzeżenia",
     "web": "Strona internetowa",
     "website": "Strona internetowa",
-    "wednesday": "Miércoles",
+    "wednesday": "Środa",
     "weeks": "Semanas",
     "weight": "Waga",
     "which-logs-store": "Jakie logi przechowywać",
@@ -1668,7 +1668,7 @@
     "year": "Año",
     "year-wildcard-info": "Año actual (de la fecha actual)",
     "yearly": "Anual",
-    "years": "Años",
+    "years": "Lata",
     "yes": "Tak",
     "yesterday": "Ayer",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
