--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -339,7 +339,7 @@
     "crm": "CRM",
     "cron-job": "Tarefa programada",
     "cron-timeout": "O cron parou para não exceder o tempo máximo de execução do PHP. Por favor, execute o cron a partir do terminal para evitar esse limite.",
-    "crons": "Crons",
+    "crons": "Cronós",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre atual",
@@ -380,7 +380,7 @@
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
-    "date-of-suspension": "Date of suspension",
+    "date-of-suspension": "Data de suspensão",
     "date-of-the-document": "Data do documento",
     "date-out": "Data de saída",
     "date-out-of-exercise-range": "A data está fora do intervalo do exercício %exerciseName%",
@@ -461,7 +461,7 @@
     "disabled-plugins": "Plugins desativados",
     "discharge-date": "Data de descarga: 0",
     "discount": "Desconto",
-    "display": "Display",
+    "display": "Visualização",
     "display-date": "F. Exibição",
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "não-agrupar",
@@ -499,7 +499,7 @@
     "duration": "Duração",
     "edit": "Editar",
     "editable": "Editável",
-    "email": "O email",
+    "email": "E-mail",
     "email-bcc": "Cópia oculta do email",
     "email-cc": "Email com cópia",
     "email-not-configured": "e",
@@ -759,7 +759,7 @@
     "incompatible-with-facturascripts": "Não é compatível com FacturaScripts %version%",
     "incorrect-accounting-amount": "Incorrect accounting entry amount.",
     "info": "Informação",
-    "infostate-component-title": "Status Information",
+    "infostate-component-title": "Informação do Status",
     "initial-number": "Número inicial",
     "insert-update": "Inserir ou atualizar",
     "installed": "Instalado",
@@ -820,7 +820,7 @@
     "journals": "Diários",
     "july": "Julho",
     "june": "Junho",
-    "justified": "justified",
+    "justified": "Justificado",
     "key-google-maps": "Chave do Google Maps",
     "keys": "Chaves",
     "lang-code": "Código de idioma",
@@ -921,7 +921,7 @@
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
     "manage": "Gerir",
-    "manage-installation": "Administrar",
+    "manage-installation": "Gerenciar",
     "manual": "Manual",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código do fabricante",
@@ -1018,7 +1018,7 @@
     "no-extra-lines": "Não adicionar linhas extras",
     "no-gaps-found": "N",
     "no-invoice": "sem fatura",
-    "no-outstanding-amount": "no-outstanding-amount",
+    "no-outstanding-amount": "Não há valor pendente",
     "no-print-permission": "Sem permissão para imprimir ou exportar",
     "no-reference": "Sem referência",
     "no-selected-item": "Nenhum item selecionado",
@@ -1095,7 +1095,7 @@
     "pagename": "Nome da página",
     "pages": "Páginas",
     "paid": "Pagado",
-    "paid-or-unpaid": "Pagado o impagado",
+    "paid-or-unpaid": "Pago ou não pago",
     "paid-receipts-prevent-action": "Recibos pagos impedem a ação",
     "parent": "Pai",
     "parent-account": "Conta Pai",
@@ -1160,7 +1160,7 @@
     "plugin-order": "O",
     "plugin-phpversion-error": "O plugin %pluginName% requer PHP %php% ou superior",
     "plugin-removal-disabled": "A remoção de plugins está desativada neste servidor",
-    "plugin-unsupported-version": "plugin-unsupported-version",
+    "plugin-unsupported-version": "O plugin %pluginName% é para o FacturaScripts 2017 ou anterior, mas você está usando o FacturaScripts %version%",
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
@@ -1337,7 +1337,7 @@
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Selecionar usuário",
-    "selected-quantity": "approve-quantity",
+    "selected-quantity": "Quantidade selecionada",
     "selector-number": "Seletor",
     "send": "Enviar",
     "send-anonymous-data": "Enviar dados anônimos",
@@ -1412,7 +1412,7 @@
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "Contas especiais",
     "specials-actions": "Specials Actions",
-    "spreadsheet-xls": "Arquivo XLS",
+    "spreadsheet-xls": "Arquivo Excel",
     "standard": "Padrão",
     "start": "Inicio",
     "start-date": "Data de início",
@@ -1546,7 +1546,7 @@
     "total-with-taxes": "Total com impostos",
     "totalirpf-value-error": "Valor total IRPF de %docType% %docCode% incorreto (%docTotalIRPF%). Valor correto: %calcTotalIRPF%",
     "totaliva-value-error": "Valor total do IVA de %docType% %docCode% incorreto (%docTotalTax%). Valor correto: %calcTotalTax%",
-    "totallinea-value-error": "Erro no valor totallinea da linha IVA do imposto 0 da factura. Valor correto: 1",
+    "totallinea-value-error": "Erro no valor totallinea da linha de IVA do imposto %taxCode% da fatura. Valor correto: %totalLine%",
     "totals": "Totais",
     "town": "Cidade",
     "tracking-code": "Código de envio",
@@ -1560,7 +1560,7 @@
     "tuesday": "terça-feira",
     "type": "Tipo",
     "type-alert": "Tipo de alerta",
-    "type-critical": "Type critical",
+    "type-critical": "Tipo crítico",
     "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
     "type-error": "Tipo de erro",
