--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -144,7 +144,7 @@
     "balance-account": "Balance account",
     "balance-account-abreviated": "Balancete de Contas Abrigado",
     "balance-amounts": "Balanço de Saldos e Saldos",
-    "balance-sheet": "Balance Sheet",
+    "balance-sheet": "Balanço Patrimonial",
     "balance-sheets": "Balancetes",
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
@@ -154,7 +154,7 @@
     "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
     "bcc": "BCC",
-    "become-sponsor": "Hazte patrocinador",
+    "become-sponsor": "Torne-se patrocinador",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -196,7 +196,7 @@
     "cant-delete-audit-log": "Não é possível eliminar o registro de auditoria",
     "cant-delete-default-company": "Não é possível excluir a empresa padrão",
     "cant-delete-default-country": "Não é possível eliminar o país padrão",
-    "cant-delete-default-currency": "cant-delete-default-currency",
+    "cant-delete-default-currency": "Não se pode eliminar a moeda padrão",
     "cant-delete-default-payment-method": "Não se pode eliminar o método de pagamento padrão",
     "cant-delete-default-serie": "Não é possível eliminar a série padrão",
     "cant-delete-default-tax": "Não é possível eliminar o imposto padrão",
@@ -270,7 +270,7 @@
     "combination-code": "Código de combinação",
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
-    "commission": "commission",
+    "commission": "Comissão",
     "commission-general-info": "commission-general-info",
     "commission-settlement": "Liquidação de comissões %code%",
     "commissions": "Comissões",
@@ -339,7 +339,7 @@
     "crm": "CRM",
     "cron-job": "Tarefa programada",
     "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
-    "crons": "Crons",
+    "crons": "Cronós",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
     "current-quarter": "Trimestre atual",
@@ -372,7 +372,7 @@
     "dasboard-backup-li3": "S",
     "dashboard": "Painel de controle",
     "dashboard-backup": "Cópia de segurança",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup-p": "Lembramos que tem o FacturaScripts instalado no seu PC, portanto os dados (faturas, clientes, etc...) são armazenados no seu PC e somente no seu PC. Faça backups regularmente e guarde esses backups longe do PC.",
     "dashboard-for": "Dashboard da %company%",
     "data-source": "Dados de origem",
     "database": "Base de dados",
@@ -380,7 +380,7 @@
     "database-name-must-be-lowercase": "O nome da base de dados deve estar em minúsculas",
     "date": "Data",
     "date-in": "Data em",
-    "date-of-suspension": "Date of suspension",
+    "date-of-suspension": "Data de suspensão",
     "date-of-the-document": "Data do documento a criar",
     "date-out": "Date out",
     "date-out-of-exercise-range": "Data da faixa de excervise 0",
@@ -461,7 +461,7 @@
     "disabled-plugins": "Plugins desativados",
     "discharge-date": "Data de descarga: 0",
     "discount": "Desconto",
-    "display": "Display",
+    "display": "Visualização",
     "display-date": "Data de exibição",
     "do-not-disable-plugins": "Não desativar plugins",
     "do-not-group": "Não agrupar",
@@ -566,7 +566,7 @@
     "es-tax-regime-surcharge": "Sobretaxa de regime especial",
     "es-tax-regime-telecom": "R",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-used-goods": "Regime especial para bens usados, objetos de arte, antiguidades e objetos de coleção",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
     "estimation-email-text": "Olá, segue em anexo o orçamento %code%",
@@ -692,7 +692,7 @@
     "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
     "generated-supplier-orders": "0 pedidos de fornecedores gerados.",
     "global-dto": "Dto. global",
-    "global-dto-2": "global-dto-2",
+    "global-dto-2": "Desconto global 2",
     "greater-than": "Melhor que",
     "grid-help": "Control + Enter para quebra de linha. Pode mover ou eliminar as linhas clicando no número da linha.",
     "group": "Grupo",
@@ -720,7 +720,7 @@
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "Saúde",
     "height": "Altura",
-    "hello": "Hola",
+    "hello": "Olá",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
@@ -885,7 +885,7 @@
     "list": "Lista",
     "load-def-acc-plan": "Carregar plano contabilístico predefinido",
     "loading-controller": "Controlador de carga: '0'",
-    "location": "Location",
+    "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
     "lock-entry": "Bloquear lançamento",
     "lock-invoice": "Bloquear fatura",
@@ -1018,7 +1018,7 @@
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "N",
     "no-invoice": "Sem fatura",
-    "no-outstanding-amount": "no-outstanding-amount",
+    "no-outstanding-amount": "Não há valor pendente",
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "Nenhum item selecionado",
@@ -1046,7 +1046,7 @@
     "notifications": "Notificaciones",
     "november": "Novembro",
     "number": "Número",
-    "number-attachments": "Nº de adjuntos",
+    "number-attachments": "Nº de anexos",
     "number-length": "number-length",
     "number-recipients": "Nº perceptores",
     "number2": "Número 2",
@@ -1110,7 +1110,7 @@
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
-    "pay": "pay",
+    "pay": "Pagar",
     "pay-with-card": "Pagar com cartão",
     "payment": "Pagamento",
     "payment-date": "Data de pagamento",
@@ -1160,7 +1160,7 @@
     "plugin-order": "O",
     "plugin-phpversion-error": "O plugin %pluginName% requer PHP %php% ou superior",
     "plugin-removal-disabled": "A remoção de plugins está desativada neste servidor",
-    "plugin-unsupported-version": "plugin-unsupported-version",
+    "plugin-unsupported-version": "O plugin %pluginName% é para o FacturaScripts 2017 ou anterior, mas você está usando o FacturaScripts %version%",
     "plugin-update": "a",
     "plugins": "Plugins",
     "plugins-p": "Os plugins permitem adicionar novas funções. Ative os que precisar agora, ou quando quiser, a partir do menu administrador.",
@@ -1278,7 +1278,7 @@
     "reloading": "Recarregando...",
     "remove-filter": "Eliminar filtros",
     "remove-from-list": "remove-from-list",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Eliminando logs até %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
@@ -1337,7 +1337,7 @@
     "select-none": "select-none",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
-    "selected-quantity": "approve-quantity",
+    "selected-quantity": "Quantidade selecionada",
     "selector-number": "Seletor",
     "send": "Enviar",
     "send-anonymous-data": "Enviar datos anónimos",
@@ -1399,8 +1399,8 @@
     "soap-extension-not-installed": "A extensão SOAP não está instalada em PHP. Entre em contato com seu provedor de hospedagem para ativá-la.",
     "social-security-number": "Número de Segurança Social",
     "sort": "Ordenar",
-    "sort-by-column": "Ordenar por columna",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-column": "Ordenar por coluna",
+    "sort-by-date-asc": "Ordenar por data asc.",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
@@ -1461,7 +1461,7 @@
     "supplied-amount": "quantidade-fornecida",
     "supplied-subaccount-not-found": "Subconta não encontrada",
     "supplier": "Fornecedor",
-    "supplier-account-not-found": "supplier-account-not-found",
+    "supplier-account-not-found": "Conta de fornecedor não encontrada",
     "supplier-code": "Cód. Fornecedor",
     "supplier-delivery-note": "Nota de Entrega de Fornecedor",
     "supplier-delivery-notes": "Notas de Entrega de Fornecedores",
@@ -1479,7 +1479,7 @@
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
     "support": "Soporte",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Subconta de acréscimo suportada",
     "supported-tax-subaccount": "Subconta de imposto suportada",
     "surcharge": "Sobretaxa",
     "surname": "Sobrenome",
@@ -1560,7 +1560,7 @@
     "tuesday": "terça-feira",
     "type": "Tipo",
     "type-alert": "Type alert",
-    "type-critical": "Type critical",
+    "type-critical": "Tipo crítico",
     "type-debug": "Tipo debug",
     "type-emergency": "Tipo de emergência",
     "type-error": "Erro de tipo",
@@ -1587,7 +1587,7 @@
     "until-subaccount": "Até subconta",
     "update": "update",
     "update-stock": "Atualizar stock",
-    "update-supplier-prices": "update-supplier-prices",
+    "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
